[project]
name = "tytonai_utils"
version = "0.1.0"
description = "Reusable helpers for interacting with the tytonai platform (S3 downloads, web map tiles, model fetch, mask rollup)."
requires-python = ">=3.14"

dependencies = [
    "python-dotenv>=1.0.0", # load credentials/config from .env
    "numpy>=2.0.0",         # tile / mask arrays (.npz)
    "tqdm>=4.66.0",         # download progress
]

[project.optional-dependencies]
# Feature 1 — web map import: GDAL reads the COG on S3 via /vsis3 (no boto3 needed).
webmap = [
    "geopandas>=1.0.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.8.0",
    "rio_tiler>=6.0.0",     # required by bbox_to_tile_grid but not declared by it
    "bbox_to_tile_grid",    # bbox -> tile grid, pulled from git (source below)
]
# Features 2-4 — manifest / model downloads via the S3 API.
s3 = ["boto3>=1.35.0"]
# Feature 3 — build a model from its config (segmentation_models_pytorch).
model = [
    "torch>=2.0.0",
    "segmentation-models-pytorch>=0.3.0",
    "timm>=0.9.0",  # backs the timm-* encoders (e.g. timm-res2net101_26w_4s)
]
# Visualization helpers (viz.py): image/mask QA plots (also covered by `webmap`).
viz = ["matplotlib>=3.8.0"]
all = ["tytonai_utils[webmap,s3,model,viz]"]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[dependency-groups]
dev = ["ruff>=0.6.0"]

[tool.uv.sources]
"bbox_to_tile_grid" = { git = "https://github.com/millcrest/tytonai-python-activities", subdirectory = "bbox_to_tile_grid", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tytonai_utils"]

[tool.ruff]
line-length = 100

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
